@@ -6,6 +6,7 @@ Version 1.0 (SNAPSHOT) - XX.May.2007
 * Add Perl bindings
 * Fix detection of VIA processors (C3, C7)
 * Fix detection of early AMD processors (K5, K6)
+* Fix detection of early Intel processors (Pentium III)
 * Fix caches detection for some VIA C3 & AMD Duron (errata)
 * Add more x86 feature flags (3dnow, sse4, popcnt)
 
